kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: autocare360
  labels:
    name: autocare360
    env: production
